PL/y.output
State 142 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: cabezaPrograma bloque

    2 cabezaPrograma: PRINCIPAL

    3 bloque: inicio_bloque declar_var_locales declar_subprogs sentencias fin_bloque
    4       | inicio_bloque declar_var_locales declar_subprogs fin_bloque

    5 declar_subprogs: declar_subprogs declar_subprog
    6                | %empty

    7 declar_subprog: cabecera_subprog bloque

    8 declar_var_locales: marca_ini_declar_variables variables_locales marca_fin_declar_variables
    9                   | marca_ini_declar_variables marca_fin_declar_variables
   10                   | %empty

   11 marca_ini_declar_variables: VAR

   12 marca_fin_declar_variables: VAREND

   13 inicio_bloque: CIZQ

   14 fin_bloque: CDCH

   15 variables_locales: variables_locales cuerpo_declar_var
   16                  | cuerpo_declar_var

   17 cuerpo_declar_var: tipo_dato sentencia_asignacion

   18 tipo_dato: TIPO_DATO_BASICO
   19          | tipo_de_dato_compuesto

   20 tipo_de_dato_compuesto: LISTA TIPO_DATO_BASICO

   21 cabecera_subprog: tipo_dato IDENTIFICADOR PIZQ parametros PDCH
   22                 | tipo_dato IDENTIFICADOR PIZQ PDCH

   23 parametros: parametros coma parametro
   24           | parametro

   25 parametros_predefinidos: parametro_predefinido coma parametro_predefinido
   26                        | parametro_predefinido
   27                        | %empty

   28 parametro: tipo_dato IDENTIFICADOR

   29 parametro_predefinido: IDENTIFICADOR
   30                      | llamada_funcion

   31 sentencias: sentencias sentencia
   32           | sentencia

   33 sentencia: bloque
   34          | sentencia_asignacion
   35          | sentencia_if
   36          | sentencia_while
   37          | sentencia_for
   38          | sentencia_entrada
   39          | sentencia_salida
   40          | llamada_funcion
   41          | sentencia_lista
   42          | retorno

   43 retorno: RETORNO expresion

   44 sentencia_asignacion: IDENTIFICADOR OP_ASIGNACION expresion punto_coma
   45                     | IDENTIFICADOR coma sentencia_asignacion
   46                     | error

   47 sentencia_if: SI PIZQ expresion PDCH sentencia
   48             | SI PIZQ expresion PDCH sentencia SINO sentencia

   49 sentencia_while: MIENTRAS PIZQ expresion PDCH sentencia

   50 sentencia_for: PARA sentencia_asignacion HASTA expresion HACER sentencia
   51              | PARA sentencia_asignacion BAJANDO_HASTA expresion HACER sentencia

   52 sentencia_entrada: nombre_entrada PIZQ lista_variables PDCH

   53 nombre_entrada: ENTRADA

   54 lista_variables: IDENTIFICADOR
   55                | lista_variables COMA IDENTIFICADOR

   56 sentencia_salida: SALIDA PIZQ lista_de_expresiones PDCH

   57 sentencia_lista: IDENTIFICADOR MOV_CURSOR
   58                | COMIENZO_LISTA IDENTIFICADOR

   59 lista_de_expresiones: expresion
   60                     | lista_de_expresiones COMA expresion

   61 expresion: PIZQ expresion PDCH
   62          | ALMOHADILLA expresion
   63          | EXCLAINTER expresion
   64          | expresion OP_BINARIO expresion
   65          | expresion MULTIPLICATIVO expresion
   66          | expresion ADITIVO expresion
   67          | IDENTIFICADOR
   68          | constante
   69          | llamada_funcion
   70          | expresion MASMAS expresion ARROBA expresion
   71          | sentencia_lista
   72          | tratamiento_error

   73 llamada_funcion: IDENTIFICADOR PIZQ parametros_predefinidos PDCH

   74 constante: NUMERICO
   75          | real
   76          | BOOLEANO
   77          | lista
   78          | cadena

   79 lista: COR_ABRE agregado COR_CIERRA

   80 agregado: expresion
   81         | agregado COMA expresion

   82 cadena: COMILLAS_DOBLES contenido_cadena COMILLAS_DOBLES
   83       | ALFABETICOPRIO

   84 contenido_cadena: contenido_cadena ALFABETICO
   85                 | contenido_cadena NUMERICO
   86                 | contenido_cadena C_ESPE
   87                 | contenido_cadena EXCLAINTER
   88                 | %empty

   89 real: NUMERICO PUNTO NUMERICO

   90 punto_coma: PYC

   91 coma: COMA
   92     | error

   93 tratamiento_error: error


Terminals, with rules where they appear

$end (0) 0
error (256) 46 92 93
IDENTIFICADOR (258) 21 22 28 29 44 45 54 55 57 58 67 73
TIPO_DATO_BASICO (259) 18 20
LISTA (260) 20
SI (261) 47 48
MIENTRAS (262) 49
PARA (263) 50 51
BAJANDO_HASTA (264) 51
HASTA (265) 50
HACER (266) 50 51
SALIDA (267) 56
ENTRADA (268) 53
SINO (269) 48
RETORNO (270) 43
PRINCIPAL (271) 2
VAR (272) 11
VAREND (273) 12
PIZQ (274) 21 22 47 48 49 52 56 61 73
PDCH (275) 21 22 47 48 49 52 56 61 73
CIZQ (276) 13
CDCH (277) 14
PUNTO (278) 89
COMA (279) 55 60 81 91
COMILLAS_DOBLES (280) 82
COR_ABRE (281) 79
COR_CIERRA (282) 79
COMIENZO_LISTA (283) 58
MOV_CURSOR (284) 57
ARROBA (285) 70
ALFABETICO (286) 84
NUMERICO (287) 74 85 89
BOOLEANO (288) 76
C_ESPE (289) 86
PYC (290) 90
OP_ASIGNACION (291) 44
ALFABETICOPRIO (292) 83
OP_BINARIO (293) 64
ADITIVO (294) 66
MULTIPLICATIVO (295) 65
ALMOHADILLA (296) 62
EXCLAINTER (297) 63 87
MASMAS (298) 70


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
S (45)
    on left: 1, on right: 0
cabezaPrograma (46)
    on left: 2, on right: 1
bloque (47)
    on left: 3 4, on right: 1 7 33
declar_subprogs (48)
    on left: 5 6, on right: 3 4 5
declar_subprog (49)
    on left: 7, on right: 5
declar_var_locales (50)
    on left: 8 9 10, on right: 3 4
marca_ini_declar_variables (51)
    on left: 11, on right: 8 9
marca_fin_declar_variables (52)
    on left: 12, on right: 8 9
inicio_bloque (53)
    on left: 13, on right: 3 4
fin_bloque (54)
    on left: 14, on right: 3 4
variables_locales (55)
    on left: 15 16, on right: 8 15
cuerpo_declar_var (56)
    on left: 17, on right: 15 16
tipo_dato (57)
    on left: 18 19, on right: 17 21 22 28
tipo_de_dato_compuesto (58)
    on left: 20, on right: 19
cabecera_subprog (59)
    on left: 21 22, on right: 7
parametros (60)
    on left: 23 24, on right: 21 23
parametros_predefinidos (61)
    on left: 25 26 27, on right: 73
parametro (62)
    on left: 28, on right: 23 24
parametro_predefinido (63)
    on left: 29 30, on right: 25 26
sentencias (64)
    on left: 31 32, on right: 3 31
sentencia (65)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 31 32 47 48 49
    50 51
retorno (66)
    on left: 43, on right: 42
sentencia_asignacion (67)
    on left: 44 45 46, on right: 17 34 45 50 51
sentencia_if (68)
    on left: 47 48, on right: 35
sentencia_while (69)
    on left: 49, on right: 36
sentencia_for (70)
    on left: 50 51, on right: 37
sentencia_entrada (71)
    on left: 52, on right: 38
nombre_entrada (72)
    on left: 53, on right: 52
lista_variables (73)
    on left: 54 55, on right: 52 55
sentencia_salida (74)
    on left: 56, on right: 39
sentencia_lista (75)
    on left: 57 58, on right: 41 71
lista_de_expresiones (76)
    on left: 59 60, on right: 56 60
expresion (77)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72, on right: 43 44 47
    48 49 50 51 59 60 61 62 63 64 65 66 70 80 81
llamada_funcion (78)
    on left: 73, on right: 30 40 69
constante (79)
    on left: 74 75 76 77 78, on right: 68
lista (80)
    on left: 79, on right: 77
agregado (81)
    on left: 80 81, on right: 79 81
cadena (82)
    on left: 82 83, on right: 78
contenido_cadena (83)
    on left: 84 85 86 87 88, on right: 82 84 85 86 87
real (84)
    on left: 89, on right: 75
punto_coma (85)
    on left: 90, on right: 44
coma (86)
    on left: 91 92, on right: 23 25 45
tratamiento_error (87)
    on left: 93, on right: 72


State 0

    0 $accept: . S $end

    PRINCIPAL  shift, and go to state 1

    S               go to state 2
    cabezaPrograma  go to state 3


State 1

    2 cabezaPrograma: PRINCIPAL .

    $default  reduce using rule 2 (cabezaPrograma)


State 2

    0 $accept: S . $end

    $end  shift, and go to state 4


State 3

    1 S: cabezaPrograma . bloque

    CIZQ  shift, and go to state 5

    bloque         go to state 6
    inicio_bloque  go to state 7


State 4

    0 $accept: S $end .

    $default  accept


State 5

   13 inicio_bloque: CIZQ .

    $default  reduce using rule 13 (inicio_bloque)


State 6

    1 S: cabezaPrograma bloque .

    $default  reduce using rule 1 (S)


State 7

    3 bloque: inicio_bloque . declar_var_locales declar_subprogs sentencias fin_bloque
    4       | inicio_bloque . declar_var_locales declar_subprogs fin_bloque

    VAR  shift, and go to state 8

    $default  reduce using rule 10 (declar_var_locales)

    declar_var_locales          go to state 9
    marca_ini_declar_variables  go to state 10


State 8

   11 marca_ini_declar_variables: VAR .

    $default  reduce using rule 11 (marca_ini_declar_variables)


State 9

    3 bloque: inicio_bloque declar_var_locales . declar_subprogs sentencias fin_bloque
    4       | inicio_bloque declar_var_locales . declar_subprogs fin_bloque

    $default  reduce using rule 6 (declar_subprogs)

    declar_subprogs  go to state 11


State 10

    8 declar_var_locales: marca_ini_declar_variables . variables_locales marca_fin_declar_variables
    9                   | marca_ini_declar_variables . marca_fin_declar_variables

    TIPO_DATO_BASICO  shift, and go to state 12
    LISTA             shift, and go to state 13
    VAREND            shift, and go to state 14

    marca_fin_declar_variables  go to state 15
    variables_locales           go to state 16
    cuerpo_declar_var           go to state 17
    tipo_dato                   go to state 18
    tipo_de_dato_compuesto      go to state 19


State 11

    3 bloque: inicio_bloque declar_var_locales declar_subprogs . sentencias fin_bloque
    4       | inicio_bloque declar_var_locales declar_subprogs . fin_bloque
    5 declar_subprogs: declar_subprogs . declar_subprog

    error             shift, and go to state 20
    IDENTIFICADOR     shift, and go to state 21
    TIPO_DATO_BASICO  shift, and go to state 12
    LISTA             shift, and go to state 13
    SI                shift, and go to state 22
    MIENTRAS          shift, and go to state 23
    PARA              shift, and go to state 24
    SALIDA            shift, and go to state 25
    ENTRADA           shift, and go to state 26
    RETORNO           shift, and go to state 27
    CIZQ              shift, and go to state 5
    CDCH              shift, and go to state 28
    COMIENZO_LISTA    shift, and go to state 29

    bloque                  go to state 30
    declar_subprog          go to state 31
    inicio_bloque           go to state 7
    fin_bloque              go to state 32
    tipo_dato               go to state 33
    tipo_de_dato_compuesto  go to state 19
    cabecera_subprog        go to state 34
    sentencias              go to state 35
    sentencia               go to state 36
    retorno                 go to state 37
    sentencia_asignacion    go to state 38
    sentencia_if            go to state 39
    sentencia_while         go to state 40
    sentencia_for           go to state 41
    sentencia_entrada       go to state 42
    nombre_entrada          go to state 43
    sentencia_salida        go to state 44
    sentencia_lista         go to state 45
    llamada_funcion         go to state 46


State 12

   18 tipo_dato: TIPO_DATO_BASICO .

    $default  reduce using rule 18 (tipo_dato)


State 13

   20 tipo_de_dato_compuesto: LISTA . TIPO_DATO_BASICO

    TIPO_DATO_BASICO  shift, and go to state 47


State 14

   12 marca_fin_declar_variables: VAREND .

    $default  reduce using rule 12 (marca_fin_declar_variables)


State 15

    9 declar_var_locales: marca_ini_declar_variables marca_fin_declar_variables .

    $default  reduce using rule 9 (declar_var_locales)


State 16

    8 declar_var_locales: marca_ini_declar_variables variables_locales . marca_fin_declar_variables
   15 variables_locales: variables_locales . cuerpo_declar_var

    TIPO_DATO_BASICO  shift, and go to state 12
    LISTA             shift, and go to state 13
    VAREND            shift, and go to state 14

    marca_fin_declar_variables  go to state 48
    cuerpo_declar_var           go to state 49
    tipo_dato                   go to state 18
    tipo_de_dato_compuesto      go to state 19


State 17

   16 variables_locales: cuerpo_declar_var .

    $default  reduce using rule 16 (variables_locales)


State 18

   17 cuerpo_declar_var: tipo_dato . sentencia_asignacion

    error          shift, and go to state 20
    IDENTIFICADOR  shift, and go to state 50

    sentencia_asignacion  go to state 51


State 19

   19 tipo_dato: tipo_de_dato_compuesto .

    $default  reduce using rule 19 (tipo_dato)


State 20

   46 sentencia_asignacion: error .

    $default  reduce using rule 46 (sentencia_asignacion)


State 21

   44 sentencia_asignacion: IDENTIFICADOR . OP_ASIGNACION expresion punto_coma
   45                     | IDENTIFICADOR . coma sentencia_asignacion
   57 sentencia_lista: IDENTIFICADOR . MOV_CURSOR
   73 llamada_funcion: IDENTIFICADOR . PIZQ parametros_predefinidos PDCH

    error          shift, and go to state 52
    PIZQ           shift, and go to state 53
    COMA           shift, and go to state 54
    MOV_CURSOR     shift, and go to state 55
    OP_ASIGNACION  shift, and go to state 56

    coma  go to state 57


State 22

   47 sentencia_if: SI . PIZQ expresion PDCH sentencia
   48             | SI . PIZQ expresion PDCH sentencia SINO sentencia

    PIZQ  shift, and go to state 58


State 23

   49 sentencia_while: MIENTRAS . PIZQ expresion PDCH sentencia

    PIZQ  shift, and go to state 59


State 24

   50 sentencia_for: PARA . sentencia_asignacion HASTA expresion HACER sentencia
   51              | PARA . sentencia_asignacion BAJANDO_HASTA expresion HACER sentencia

    error          shift, and go to state 20
    IDENTIFICADOR  shift, and go to state 50

    sentencia_asignacion  go to state 60


State 25

   56 sentencia_salida: SALIDA . PIZQ lista_de_expresiones PDCH

    PIZQ  shift, and go to state 61


State 26

   53 nombre_entrada: ENTRADA .

    $default  reduce using rule 53 (nombre_entrada)


State 27

   43 retorno: RETORNO . expresion

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 73
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 28

   14 fin_bloque: CDCH .

    $default  reduce using rule 14 (fin_bloque)


State 29

   58 sentencia_lista: COMIENZO_LISTA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 80


State 30

   33 sentencia: bloque .

    $default  reduce using rule 33 (sentencia)


State 31

    5 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce using rule 5 (declar_subprogs)


State 32

    4 bloque: inicio_bloque declar_var_locales declar_subprogs fin_bloque .

    $default  reduce using rule 4 (bloque)


State 33

   21 cabecera_subprog: tipo_dato . IDENTIFICADOR PIZQ parametros PDCH
   22                 | tipo_dato . IDENTIFICADOR PIZQ PDCH

    IDENTIFICADOR  shift, and go to state 81


State 34

    7 declar_subprog: cabecera_subprog . bloque

    CIZQ  shift, and go to state 5

    bloque         go to state 82
    inicio_bloque  go to state 7


State 35

    3 bloque: inicio_bloque declar_var_locales declar_subprogs sentencias . fin_bloque
   31 sentencias: sentencias . sentencia

    error           shift, and go to state 20
    IDENTIFICADOR   shift, and go to state 21
    SI              shift, and go to state 22
    MIENTRAS        shift, and go to state 23
    PARA            shift, and go to state 24
    SALIDA          shift, and go to state 25
    ENTRADA         shift, and go to state 26
    RETORNO         shift, and go to state 27
    CIZQ            shift, and go to state 5
    CDCH            shift, and go to state 28
    COMIENZO_LISTA  shift, and go to state 29

    bloque                go to state 30
    inicio_bloque         go to state 7
    fin_bloque            go to state 83
    sentencia             go to state 84
    retorno               go to state 37
    sentencia_asignacion  go to state 38
    sentencia_if          go to state 39
    sentencia_while       go to state 40
    sentencia_for         go to state 41
    sentencia_entrada     go to state 42
    nombre_entrada        go to state 43
    sentencia_salida      go to state 44
    sentencia_lista       go to state 45
    llamada_funcion       go to state 46


State 36

   32 sentencias: sentencia .

    $default  reduce using rule 32 (sentencias)


State 37

   42 sentencia: retorno .

    $default  reduce using rule 42 (sentencia)


State 38

   34 sentencia: sentencia_asignacion .

    $default  reduce using rule 34 (sentencia)


State 39

   35 sentencia: sentencia_if .

    $default  reduce using rule 35 (sentencia)


State 40

   36 sentencia: sentencia_while .

    $default  reduce using rule 36 (sentencia)


State 41

   37 sentencia: sentencia_for .

    $default  reduce using rule 37 (sentencia)


State 42

   38 sentencia: sentencia_entrada .

    $default  reduce using rule 38 (sentencia)


State 43

   52 sentencia_entrada: nombre_entrada . PIZQ lista_variables PDCH

    PIZQ  shift, and go to state 85


State 44

   39 sentencia: sentencia_salida .

    $default  reduce using rule 39 (sentencia)


State 45

   41 sentencia: sentencia_lista .

    $default  reduce using rule 41 (sentencia)


State 46

   40 sentencia: llamada_funcion .

    $default  reduce using rule 40 (sentencia)


State 47

   20 tipo_de_dato_compuesto: LISTA TIPO_DATO_BASICO .

    $default  reduce using rule 20 (tipo_de_dato_compuesto)


State 48

    8 declar_var_locales: marca_ini_declar_variables variables_locales marca_fin_declar_variables .

    $default  reduce using rule 8 (declar_var_locales)


State 49

   15 variables_locales: variables_locales cuerpo_declar_var .

    $default  reduce using rule 15 (variables_locales)


State 50

   44 sentencia_asignacion: IDENTIFICADOR . OP_ASIGNACION expresion punto_coma
   45                     | IDENTIFICADOR . coma sentencia_asignacion

    error          shift, and go to state 52
    COMA           shift, and go to state 54
    OP_ASIGNACION  shift, and go to state 56

    coma  go to state 57


State 51

   17 cuerpo_declar_var: tipo_dato sentencia_asignacion .

    $default  reduce using rule 17 (cuerpo_declar_var)


State 52

   92 coma: error .

    $default  reduce using rule 92 (coma)


State 53

   73 llamada_funcion: IDENTIFICADOR PIZQ . parametros_predefinidos PDCH

    IDENTIFICADOR  shift, and go to state 86

    $default  reduce using rule 27 (parametros_predefinidos)

    parametros_predefinidos  go to state 87
    parametro_predefinido    go to state 88
    llamada_funcion          go to state 89


State 54

   91 coma: COMA .

    $default  reduce using rule 91 (coma)


State 55

   57 sentencia_lista: IDENTIFICADOR MOV_CURSOR .

    $default  reduce using rule 57 (sentencia_lista)


State 56

   44 sentencia_asignacion: IDENTIFICADOR OP_ASIGNACION . expresion punto_coma

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 90
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 57

   45 sentencia_asignacion: IDENTIFICADOR coma . sentencia_asignacion

    error          shift, and go to state 20
    IDENTIFICADOR  shift, and go to state 50

    sentencia_asignacion  go to state 91


State 58

   47 sentencia_if: SI PIZQ . expresion PDCH sentencia
   48             | SI PIZQ . expresion PDCH sentencia SINO sentencia

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 92
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 59

   49 sentencia_while: MIENTRAS PIZQ . expresion PDCH sentencia

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 93
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 60

   50 sentencia_for: PARA sentencia_asignacion . HASTA expresion HACER sentencia
   51              | PARA sentencia_asignacion . BAJANDO_HASTA expresion HACER sentencia

    BAJANDO_HASTA  shift, and go to state 94
    HASTA          shift, and go to state 95


State 61

   56 sentencia_salida: SALIDA PIZQ . lista_de_expresiones PDCH

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista       go to state 72
    lista_de_expresiones  go to state 96
    expresion             go to state 97
    llamada_funcion       go to state 74
    constante             go to state 75
    lista                 go to state 76
    cadena                go to state 77
    real                  go to state 78
    tratamiento_error     go to state 79


State 62

   93 tratamiento_error: error .

    $default  reduce using rule 93 (tratamiento_error)


State 63

   57 sentencia_lista: IDENTIFICADOR . MOV_CURSOR
   67 expresion: IDENTIFICADOR .
   73 llamada_funcion: IDENTIFICADOR . PIZQ parametros_predefinidos PDCH

    PIZQ        shift, and go to state 53
    MOV_CURSOR  shift, and go to state 55

    $default  reduce using rule 67 (expresion)


State 64

   61 expresion: PIZQ . expresion PDCH

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 98
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 65

   82 cadena: COMILLAS_DOBLES . contenido_cadena COMILLAS_DOBLES

    $default  reduce using rule 88 (contenido_cadena)

    contenido_cadena  go to state 99


State 66

   79 lista: COR_ABRE . agregado COR_CIERRA

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 100
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    agregado           go to state 101
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 67

   74 constante: NUMERICO .
   89 real: NUMERICO . PUNTO NUMERICO

    PUNTO  shift, and go to state 102

    $default  reduce using rule 74 (constante)


State 68

   76 constante: BOOLEANO .

    $default  reduce using rule 76 (constante)


State 69

   83 cadena: ALFABETICOPRIO .

    $default  reduce using rule 83 (cadena)


State 70

   62 expresion: ALMOHADILLA . expresion

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 103
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 71

   63 expresion: EXCLAINTER . expresion

    error            shift, and go to state 62
    IDENTIFICADOR    shift, and go to state 63
    PIZQ             shift, and go to state 64
    COMILLAS_DOBLES  shift, and go to state 65
    COR_ABRE         shift, and go to state 66
    COMIENZO_LISTA   shift, and go to state 29
    NUMERICO         shift, and go to state 67
    BOOLEANO         shift, and go to state 68
    ALFABETICOPRIO   shift, and go to state 69
    ALMOHADILLA      shift, and go to state 70
    EXCLAINTER       shift, and go to state 71

    sentencia_lista    go to state 72
    expresion          go to state 104
    llamada_funcion    go to state 74
    constante          go to state 75
    lista              go to state 76
    cadena             go to state 77
    real               go to state 78
    tratamiento_error  go to state 79


State 72

   71 expresion: sentencia_lista .

    $default  reduce using rule 71 (expresion)


State 73

   43 retorno: RETORNO expresion .
   64 expresion: expresion . OP_BINARIO expresion
   65          | expresion . MULTIPLICATIVO expresion
   66          | expresion . ADITIVO expresion
   70          | expresion . MASMAS expresion ARROBA expresion

    OP_BINARIO      shift, and go to state 105
    ADITIVO         shift, and go to state 106
    MULTIPLICATIVO  shift, and go to state 107
    MASMAS          shift, and go to state 108
